<resources>
    <string name="app_name">ContactsApplication</string>
    <string name="action_settings">Settings</string>

    <string name="action_add_contact">Add contact</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search</string>

    <string name="action_save_contact">Save Contact</string>

    <string name="action_update_contact">Update Contact</string>

    <string name="action_edit_contact">Edit Contact</string>
    <string name="action_delete_contact">Delete Contact</string>

    <string name="btn1Name">1</string>
    <string name="btn2Name">2</string>
    <string name="btn3Name">3</string>

    <string name="btn4Name">4</string>
    <string name="btn5Name">5</string>
    <string name="btn6Name">6</string>

    <string name="btn7Name">7</string>
    <string name="btn8Name">8</string>
    <string name="btn9Name">9</string>

    <string name="btnStar">*</string>
    <string name="btnZero">0</string>
    <string name="btnPound">#</string>

    <string name="btnCall">Call</string>
    <string name="btnEndCall">End</string>

    <string name="contactIconDesc">Contact Icon</string>

    <string name="btnMessage">Message</string>
    <string name="btnEmail">Email</string>

    <string name="txtFirstName">First Name</string>
    <string name="txtLastName">Last Name</string>
    <string name="txtNumber">Telephone</string>
    <string name="txtEmail">Email</string>
    <string name="txtAddress">Address</string>
    <string name="txtPostcode">Postcode</string>

</resources>
