<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".KeypadActivity"
    android:columnCount="4"
    android:rowCount="6"
    android:orientation="vertical"
    android:layout_gravity="center"
    >

    <TextView
        android:id="@+id/display_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="35dp"
        android:layout_marginLeft="35dp"
        />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn1Name"
        android:layout_row="1"
        android:layout_column="0"
        android:onClick="onClickCallBack"
        android:background="@android:color/transparent"
        style="@style/ButtonStyle"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn2Name"
        android:layout_row="1"
        android:layout_column="1"
        android:onClick="onClickCallBack"
        android:background="@android:color/transparent"
        android:layout_marginRight="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginBottom="25dp"
        style="@style/ButtonStyle"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn3Name"
        android:layout_row="1"
        android:layout_column="2"
        android:onClick="onClickCallBack"
        android:background="@android:color/transparent"
        style="@style/ButtonStyle"/>

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn4Name"
        android:layout_row="2"
        android:layout_column="0"
        android:onClick="onClickCallBack"
        android:background="@android:color/transparent"
        style="@style/ButtonStyle"/>

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn5Name"
        android:layout_row="2"
        android:layout_column="1"
        android:onClick="onClickCallBack"
        android:background="@android:color/transparent"
        android:layout_marginRight="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginBottom="25dp"
        style="@style/ButtonStyle"/>

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn6Name"
        android:layout_row="2"
        android:layout_column="2"
        android:onClick="onClickCallBack"
        android:background="@android:color/transparent"
        style="@style/ButtonStyle"/>

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn7Name"
        android:layout_row="3"
        android:layout_column="0"
        android:onClick="onClickCallBack"
        android:background="@android:color/transparent"
        style="@style/ButtonStyle"/>

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn8Name"
        android:layout_row="3"
        android:layout_column="1"
        android:onClick="onClickCallBack"
        android:background="@android:color/transparent"
        android:layout_marginRight="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginBottom="25dp"
        style="@style/ButtonStyle"/>

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn9Name"
        android:layout_row="3"
        android:layout_column="2"
        android:onClick="onClickCallBack"
        android:background="@android:color/transparent"
        style="@style/ButtonStyle"/>

    <Button
        android:id="@+id/buttonStar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnStar"
        android:layout_row="4"
        android:layout_column="0"
        android:onClick="onClickCallBack"
        android:background="@android:color/transparent"
        style="@style/ButtonStyle"/>

    <Button
        android:id="@+id/buttonZero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnZero"
        android:layout_row="4"
        android:layout_column="1"
        android:onClick="onClickCallBack"
        android:background="@android:color/transparent"
        android:layout_marginRight="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginBottom="25dp"
        style="@style/ButtonStyle"/>

    <Button
        android:id="@+id/buttonPound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnPound"
        android:layout_row="4"
        android:layout_column="2"
        android:onClick="onClickCallBack"
        android:background="@android:color/transparent"
        style="@style/ButtonStyle"/>

    <Button
        android:id="@+id/buttonCall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:onClick="onClickCall"
        android:text="@string/btnCall"
        android:drawableLeft="@android:drawable/ic_menu_call"
        android:drawableStart="@android:drawable/ic_menu_call"
        android:background="@android:color/transparent"
        android:layout_marginRight="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginBottom="25dp"
        style="@style/ButtonCallStyle"/>

    <Button
        android:id="@+id/buttonDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="2"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:onClick="onClickDelete"
        android:drawableRight="@drawable/backspace_black"
        android:drawableEnd="@drawable/backspace_black"
        android:background="@null"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        style="@style/ButtonStyle"/>


</GridLayout>




