<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditContactActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="9"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:id="@+id/contactIcon"
            android:layout_width="175dp"
            android:layout_height="175dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:contentDescription="@string/contactIconDesc"
            android:src="@drawable/contact_icon"
            android:layout_marginTop="25dp"
            android:layout_gravity="center"
            style="@style/TextContactStyle"/>

        <TextView
            android:id="@+id/firstName_view"
            style="@style/TextContactStyle"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_gravity="center|start"
            android:layout_marginTop="20dp"
            android:text="@string/txtFirstName" />

        <EditText
            android:id="@+id/firstName"
            style="@style/TextContactStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="150dp"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_gravity="center|start"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:inputType="text" />

        <TextView
            android:id="@+id/lastName_view"
            style="@style/TextContactStyle"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_gravity="center|start"
            android:layout_marginTop="5dp"
            android:text="@string/txtLastName" />

        <EditText
            android:id="@+id/lastName"
            style="@style/TextContactStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="150dp"
            android:layout_row="4"
            android:layout_column="1"
            android:layout_gravity="center|start"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:inputType="text" />

        <TextView
            android:id="@+id/number_view"
            style="@style/TextContactStyle"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_column="0"
            android:layout_gravity="center|start"
            android:layout_marginTop="5dp"
            android:text="@string/txtNumber" />

        <EditText
            android:id="@+id/number"
            style="@style/TextContactStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="150dp"
            android:layout_row="5"
            android:layout_column="1"
            android:layout_gravity="center|start"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:inputType="text" />

        <TextView
            android:id="@+id/email_view"
            style="@style/TextContactStyle"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_row="6"
            android:layout_column="0"
            android:layout_gravity="center|start"
            android:layout_marginTop="5dp"
            android:text="@string/txtEmail" />

        <EditText
            android:id="@+id/email"
            style="@style/TextContactStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="150dp"
            android:layout_row="6"
            android:layout_column="1"
            android:layout_gravity="center|start"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:inputType="text" />

        <TextView
            android:id="@+id/address_view"
            style="@style/TextContactStyle"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_row="7"
            android:layout_column="0"
            android:layout_gravity="center|start"
            android:layout_marginTop="5dp"
            android:text="@string/txtAddress" />

        <EditText
            android:id="@+id/address"
            style="@style/TextContactStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="150dp"
            android:layout_row="7"
            android:layout_column="1"
            android:layout_gravity="center|start"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:inputType="text" />

        <TextView
            android:id="@+id/postcode_view"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_row="8"
            android:layout_column="0"
            android:text="@string/txtPostcode"
            android:layout_gravity="center|start"
            android:layout_marginTop="5dp"
            style="@style/TextContactStyle"/>

        <EditText
            android:id="@+id/postcode"
            style="@style/TextContactStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="150dp"
            android:layout_row="8"
            android:layout_column="1"
            android:layout_gravity="center|start"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:inputType="text" />

    </GridLayout>

</android.support.design.widget.CoordinatorLayout>